<resources>
    <string name="app_name">MyLogin</string>

    <string name="loading">正在加载...</string>

    <string name="login_action_result_success">登录成功</string>
    <string name="login_action_result_fail">登录失败</string>
    <string name="sign_action_result_success">注册成功</string>
    <string name="sign_action_result_fail">注册失败</string>

    <string name="title_login_already">已登录</string>
    <string name="title_login_success">登录成功</string>
    <string name="title_sign_success">注册成功</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_finish">退出登录</string>

    <string name="activity_xml_login_phone">手机号登录</string>
    <string name="activity_xml_sign_phone">手机号注册</string>
    <string name="activity_xml_login_account">手机号：</string>
    <string name="activity_xml_login_password">密码：</string>
    <string name="activity_xml_login_login">登录</string>
    <string name="activity_xml_login_sign">注册</string>
    <string name="activity_xml_login_login_success">登录成功</string>
    <string name="activity_xml_login_logout">退出登录</string>
    <string name="activity_xml_login_hint_type_phone">请填写手机号码</string>
    <string name="activity_xml_login_hint_type_password">请输入密码</string>

    <string name="activity_xml_login_have_not_account">没有账号，去注册</string>
    <string name="activity_xml_login_have_account">已经有账号，去登录</string>

</resources>
